fixed default style for a tag on iOS (3)

--- a/nam-to-ink/src/index.css
+++ b/nam-to-ink/src/index.css
@@ -27,6 +27,7 @@
 
 .btn {
   background: #f8f0e8;
+  color: #010000;
 }
 
 .btn > a {
